--- a/Project_Paper/MUSI6201_Project_Paper.tex
+++ b/Project_Paper/MUSI6201_Project_Paper.tex
@@ -76,7 +76,7 @@ Discogs.com is an user-sourced database and marketplace for album releases on vi
 
 % maybe talk about digital7 here???
 
-In this paper, the problem of automatically computing song's decade is addressed. More specifically, using the combination of traditional music genre classification approach and music metadata to estimate the year of a song are proposed. Although there has been significant works in the development of music information retrieval especially for genre classification, there has been relatively little work in the development of song's year or decade computation.
+In this paper, the problem of automatically computing song's decade is addressed. More specifically, the technique of using the combination of traditional music genre classification approaches with music metadata to estimate the year of a song is proposed. Although there has been significant works in the development of music information retrieval especially for genre classification, there has been relatively little work in the development of song's year or decade computation.
 
 %==========================================
 \section{Related Work}
