add one more reference

--- a/Project_Paper/refs.bib
+++ b/Project_Paper/refs.bib
@@ -105,3 +105,13 @@
 	Pages = {591--596},
 	Title = {The million song dataset},
 	Year = {2011}}
+
+
+@inproceedings{vedaldi2010vlfeat,
+  title={VLFeat: An open and portable library of computer vision algorithms},
+  author={Vedaldi, Andrea and Fulkerson, Brian},
+  booktitle={Proceedings of the international conference on Multimedia},
+  pages={1469--1472},
+  year={2010},
+  organization={ACM}
+}
