--- a/Project_Paper/MUSI6201_Project_Paper.tex
+++ b/Project_Paper/MUSI6201_Project_Paper.tex
@@ -185,8 +185,14 @@ The SVM Regression was performed on the year data only, as genres can only be cl
 
 \subsubsection{KNN of Year}
 
-The second approach used only the KNN directly on the year label, with no genre influence. This was surprisingly the simplest but most effective result. We achieved our best results using a K value of 7 with only the mean of MFCCs as features. This resulted in a mean error of 8.751 years and 8.015 years for the interleaved segmentation and randomized segmentation respectively. Our KNN algorithm, uses an inverse weighting function calculated by the euclidean distance as a method to give priority over nearer results. 
-
+The second approach used only the KNN directly on the year label, with no genre influence. This was surprisingly the simplest but most effective result. We achieved our best results using a K value of 7 with only the mean of MFCCs as features. This resulted in a mean error of 8.751 years and 8.015 years for the interleaved segmentation and randomized segmentation respectively. Our KNN algorithm uses an inverse weighting function calculated by the euclidean distance as a method to give priority over nearer results, shown below.
+\begin{eqnarray*}
+w_{k} &=&  (1 - (d_{k} / {\sum\limits_{k = 1}^{K} d_{k}})) / (K-1)
+ \end{eqnarray*}
+\begin{eqnarray*}
+{\mathrm{Y_{E}}} &=& {\sum\limits_{k = 1}^{K} w_{k}*y_{k}}
+ \end{eqnarray*}
+ 
 \subsubsection{Hierarchical Model: SVM and KNN } 
 Our third approach make use of both the SVM and KNN models in a hierarchical manner. First we used the the SVM to classify the genres using both the mean and standard deviation of MFCCs and our spectral features. Prior to refactoring our dataset, we achieved results of 55.4\% and 66.4\% accuracy for the interleaved and randomized segmentations respectively. After refactoring, however we saw our results decrease, due to the album effect. Since we intentionally targeted repeat songs and full albums present in the GTZAN dataset, our distribution of features expanded within each genre making it more difficult for the SVM to accurately perform classification. After refactoring, the accuracy for classifying genre was 51.5\% and 61.0\% for the interleaved and randomized segmentations respectively. The confusion matrices in Figure 3 describe these results.
 
